# KR-Checkers

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-app.yml
src/: __main__.py  ai.py  board.py  checkers.py  human.py  piece.py
src/checkers/: __init__.py  __main__.py  ai.py  board.py  game.py  gui.py  human.py  instructions.py  main.py  piece.py  player.py
tests/: test_board.py
